--- a/src/app/components/quizz/quizz.component.css
+++ b/src/app/components/quizz/quizz.component.css
@@ -1,68 +1,68 @@
-.quizz_conatiner {
+.quizz__container{
     width: 80%;
     margin: auto;
     margin-top: 20px;
-}
-
-.quizz_logo {
+  }
+  
+  .quizz_logo{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-bottom: 10px;
-}
-
-.quizz_logo>h3 {
+  }
+  
+  .quizz_logo > h3{
     margin-top: 20px;
-}
-
-.quizz_questions {
+  }
+  
+  .quizz_questions{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #4224D9;
+    border:1px solid #4224d9;
     border-radius: 8px;
     background-color: #644ED2;
     width: 100%;
     height: 200px;
     font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI';
     margin-bottom: 20px;
-}
-
-.quizz_options {
+  }
+  
+  .quizz_options{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: auto;
     margin-bottom: 20px;
-}
-
-.btn-option {
+  }
+  
+  .btn-option{
     background-color: transparent;
     border-radius: 8px;
-    border: 1px solid #18AB29;
+    border: 1px solid #18ab29;
     width: 50%;
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
     font-size: 17px;
     padding: 16px 31px;
     text-decoration: none;
-    text-shadow: 0px 1px 0px #2F6627;
-}
-
-.btn-option:hover {
-    background-color: #5CBF2A;
-}
-
-.btn-option:active {
+    text-shadow: 0px 1px 0px #2f6627;
+  }
+  
+  .btn-option:hover{
+    background-color: #5cbf2a;
+  }
+  
+  .btn-option:active{
     position: relative;
-    top: 1px;
-}
-
-.quizz_results {
+    top:1px;
+  }
+  
+  .quizz_results{
     width: 100%;
     height: 350px;
     background-color: #1F0539;
@@ -72,4 +72,4 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+  }
