--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,21 +1,28 @@
-<div class="quizz_conatiner">
+<div class="quizz__container">
+
     <div class="quizz_logo">
-        <img src="assets/imags/logo.png" alt="" srcset="">
-        <h3>{{title}}</h3>
+      <img src="assets/imgs/logo.png" alt="" srcset="">
+      <h3>{{title}}</h3>
     </div>
-    <div *ngif=!finished class="quizz_questions">
+  
+    <div *ngIf=!finished class="quizz_questions">
         <h3>{{questionSelected.question}}</h3>
     </div>
-    <div *ngif=!finished class="quizz_options">
-        <button 
+  
+    <div *ngIf=!finished class="quizz_options">
+  
+      <button
         *ngFor="let option of questionSelected.options; let i = index"
         (click)="playerChoose(option.alias)"
-        class="btn-option">
-            {{option.name}}
-        </button>
+        class="btn-option"
+      >
+        {{option.name}}
+      </button>
+  
     </div>
-    <div *ngif=finished class="quizz_results">
-        <h1>O seu resultado é</h1>
-        <p></p>
+  
+    <div *ngIf=finished class="quizz_results">
+      <h1>O Seu resultado é:</h1>
+      <p>{{answerSelected}}</p>
     </div>
-</div>
+  </div>
